--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,629 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+	--black: #000000;
+	--gray: #545454;
+	--lightgray: rgb(187, 187, 187);
+	--white: #ffffff;
+	--green: #2edd2b;
+	--darkgreen: #005700;
+	--red: #be0b0b;
+	--darkred: #610000;
+	--yellow: #fec936;
+	--blue: #2671ce;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-html,
+html {
+	font-size: 62.5%;
+	height: auto;
+}
+
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	font-family: 'Inter', sans-serif;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	color: var(--black);
+	background: linear-gradient(
+		to bottom,
+		var(--black),
+		var(--black),
+		var(--black),
+		var(--gray)
+	);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.main-container-y {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	width: 100%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.main-container-x {
+	display: flex;
+	flex-direction: row;
+	flex: 1;
+	width: 100%;
+
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.button-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+}
+
+h1 {
+	font-size: 3.3rem;
+	color: var(--white);
+	font-weight: 300;
+	margin-bottom: 3rem;
+}
+
+h2 {
+	font-size: 4rem;
+	color: var(--white);
+	text-align: center;
+}
+
+h3 {
+	font-size: 3.3rem;
+	color: var(--white);
+	text-align: center;
+	margin: 0;
+	padding: 0;
+	font-weight: 300;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+h4 {
+	font-size: 2.6rem;
+	color: var(--white);
+	/* font-weight: bold; */
+	margin-bottom: 1.5rem;
+}
+
+p {
+	font-size: 2.4rem;
+	color: var(--white);
+	text-align: justify;
+	letter-spacing: 0.5px;
+	line-height: 4rem;
+	margin-bottom: 3rem;
+}
+
+.pre-tag {
+	font-size: 2.4rem;
+	color: var(--white);
+	text-align: justify;
+	letter-spacing: 0.5px;
+	line-height: 5rem;
+	margin-bottom: 2rem;
+	font-family: 'Inter', 'Segoe UI';
+	white-space: pre-wrap;
+}
+
+label {
+	font-size: 2.4rem;
+	color: var(--white);
+	text-align: left;
+	letter-spacing: 0.5px;
+	line-height: 4rem;
+	margin-bottom: 0rem;
+	width: 100%;
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+	text-align: center;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+	font-size: 2.4rem;
+	text-align: center;
+	padding: 1.2rem 2.5rem;
+	border-radius: 8px;
+	border: solid 1px transparent;
+	transition: all 400ms;
+}
+
+textarea {
+	font-size: 2.4rem;
+	text-align: left;
+	padding: 1rem 2rem;
+	margin: 0 1rem;
+	border-radius: 10px;
+	transition: all 400ms;
+	height: 30rem;
+	width: 100%;
+	font-family: inherit;
+	line-height: 3.5rem;
+}
+
+input[type="text"]:hover,
+input[type="email"]:hover,
+input[type="password"]:hover,
+textarea:hover {
+	cursor: pointer;
+	box-shadow: inset 0 0 10px var(--green);
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+textarea:focus {
+	box-shadow: 0 0 15px var(--white);
+	color: var(--blue);
+	outline: none;
+	border: solid 1px var(--blue);
+}
+
+
+.link-button {
+	font-size: 2.4rem;
+	font-weight: 400;
+	padding: 1.2rem 2.5rem;
+	border-radius: 8px;
+	border: solid 2px var(--lightgray);
+	background-color: var(--black);
+	color: var(--lightgray);
+	transition: all 200ms;
+	width: 37rem;
+	text-decoration: none;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	gap: 1rem;
+}
+
+.link-button:hover,
+.active {
+	cursor: pointer;
+	background-color: var(--gray);
+	color: var(--white);
+	border: solid 2px var(--white);
+}
+
+.link-button-danger {
+	font-size: 2.4rem;
+	font-weight: 400;
+	padding: 1.2rem 2.5rem;
+	border-radius: 8px;
+	border: solid 2px var(--red);
+	background-color: var(--black);
+	color: var(--lightgray);
+	transition: all 200ms;
+	width: 37rem;
+	text-decoration: none;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+}
+
+.link-button-danger:hover {
+	cursor: pointer;
+	background-color: var(--darkred);
+	color: var(--white);
+	border: solid 2px var(--red);
+}
+
+.link-button-success {
+	font-size: 2.4rem;
+	font-weight: 400;
+	padding: 1.2rem 2.5rem;
+	border-radius: 8px;
+	border: solid 2px var(--green);
+	background-color: var(--black);
+	color: var(--lightgray);
+	transition: all 200ms;
+	width: 37rem;
+	text-decoration: none;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+}
+
+.link-button-success:hover {
+	cursor: pointer;
+	background-color: var(--darkgreen);
+	color: var(--white);
+	border: solid 2px var(--green);
+}
+
+svg {
+	color: var(--white);
+	font-size: 3rem;
+}
+
+.bsp {
+	box-shadow: 3px -3px 10px var(--white);
+}
+
+.link, .link > p {
+	font-size: 2.4rem;
+	color: var(--white);
+	font-weight: 200;
+	transition: all 300ms ease-in-out;
+	text-decoration: none;
+}
+
+.link:hover, .link > p:hover {
+	color: var(--white);
+	transform: scale(1.02);
+}
+
+.success {
+	color: var(--black);
+	background-color: var(--green);
+	padding: 1.2rem 3rem;
+	border-radius: 8px;
+	box-shadow: 0 0 10px var(--green);
+	text-align: center;
+	width: 100%;
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+}
+
+.error {
+	color: var(--white);
+	background-color: var(--red);
+	padding: 1.2rem 3rem;
+	border-radius: 8px;
+	box-shadow: 0 0 10px var(--red);
+	text-align: center;
+	width: 100%;
+	margin: 0;
+}
+
+.hidden {
+	display: none;
+}
+
+.black-color {
+	color: var(--black);
+}
+
+.text-center {
+	text-align: center;
+}
+
+.py-1 {
+	padding: 1rem 1.5rem;
   }
+
+/* --------------------------------------------------------------------------- */
+
+/* Estilos para Pantallas Grandes */
+@media (max-width: 2000px) and (min-width: 1440px) {
+
+	h1 {
+		font-size: 2rem;
+		margin-bottom: 2rem;
+	}
+
+	h2 {
+		font-size: 2.2rem;
+	}
+
+	h3 {
+		font-size: 2rem;
+	}
+
+	h4 {
+		font-size: 1.8rem;
+		margin-bottom: 1rem;
+	}
+
+	p {
+		font-size: 1.6rem;
+		line-height: 3rem;
+		margin-bottom: 2rem;
+	}
+
+	.pre-tag {
+		font-size: 1.6rem;
+		margin-bottom: 1rem;
+		line-height: 3.5rem;
+	}
+
+	.link, .link > p {
+		font-size: 1.6rem;
+	}
+
+	label {
+		font-size: 1.6rem;
+		line-height: 3.5rem;
+	}
+
+	input[type="text"],
+	input[type="email"],
+	input[type="password"] {
+		font-size: 1.4rem;
+		padding: 1.2rem 1.5rem;
+	}
+
+	textarea {
+		font-size: 1.4rem;
+		height: 20rem;
+		padding: 1rem 1.5rem;
+		line-height: 2rem;
+	}
+
+	.link-button, .link-button-success, .link-button-danger {
+		font-size: 1.6rem;
+		padding: 1rem 1.5rem;
+		width: 24rem;
+	}
+
+	svg {
+		font-size: 2rem;
+	}
+
+	form {
+		display: flex;
+		width: fit-content;
+		text-align: center;
+	}
+}
+
+/* --------------------------------------------------------------------------- */
+
+/* Estilos para Laptops */
+@media (max-width: 1439px) and (min-width: 1024px) {
+
+	h1 {
+		font-size: 2rem;
+		margin-bottom: 2rem;
+	}
+
+	h2 {
+		font-size: 2.2rem;
+	}
+
+	h3 {
+		font-size: 2rem;
+	}
+
+	h4 {
+		font-size: 1.8rem;
+		margin-bottom: 1rem;
+	}
+
+	p {
+		font-size: 1.6rem;
+		line-height: 3rem;
+		margin-bottom: 2rem;
+	}
+
+	.pre-tag {
+		font-size: 1.6rem;
+		margin-bottom: 1rem;
+		line-height: 3rem;
+	}
+
+	.link, .link > p {
+		font-size: 1.6rem;
+	}
+
+	label {
+		font-size: 1.6rem;
+		line-height: 3rem;
+	}
+
+	input[type="text"],
+	input[type="email"],
+	input[type="password"] {
+		font-size: 1.4rem;
+		padding: 1.2rem 1rem;
+	}
+
+	textarea {
+		font-size: 1.4rem;
+		height: 20rem;
+		padding: 1rem 1.5rem;
+		line-height: 2rem;
+
+	}
+
+	.link-button, .link-button-success, .link-button-danger {
+		flex: 0 0 35%;
+		width: 33rem;
+		font-size: 1.6rem;
+		padding: 1rem 1.5rem;
+	}
+
+	svg {
+		font-size: 2rem;
+	}
+
+	form {
+		display: flex;
+		width: fit-content;
+		text-align: center;
+	}
+
+}
+
+/* --------------------------------------------------------------------------- */
+
+/* Estilos para Tablets */
+@media (max-width: 1023px) and (min-width: 601px) {
+
+	h1 {
+		font-size: 1.8rem;
+		margin-bottom: 2rem;
+	}
+
+	h2 {
+		font-size: 2rem;
+	}
+
+	h3 {
+		font-size: 1.8rem;
+	}
+
+	h4 {
+		font-size: 1.7rem;
+		margin-bottom: 0rem;
+	}
+
+	p {
+		font-size: 1.4rem;
+		line-height: 2.6rem;
+		margin-bottom: 2rem;
+	}
+
+	.pre-tag {
+		font-size: 1.4rem;
+		margin-bottom: 1rem;
+		line-height: 2.5rem;
+	}
+
+	.link, .link > p {
+		font-size: 1.4rem;
+	}
+
+	label {
+		font-size: 1.4rem;
+		line-height: 3rem;
+	}
+
+	input[type="text"],
+	input[type="email"],
+	input[type="password"] {
+		font-size: 1.3rem;
+		padding: 1rem;
+	}
+
+	textarea {
+		font-size: 1.3rem;
+		height: 15rem;
+		padding: 1rem 1.2rem;
+		line-height: 1.7rem;
+	}
+
+	.link-button, .link-button-success, .link-button-danger {
+		font-size: 1.4rem;
+		padding: 1rem 1.5rem;
+		border-radius: 6px;
+		flex: 0 0 34%;
+		width: 30rem;
+	}
+
+	svg {
+		font-size: 2rem;
+	}
+
+	form {
+		display: flex;
+		width: fit-content;
+		text-align: center;
+	}
+}
+
+/* --------------------------------------------------------------------------- */
+
+/* Estilos para Móviles */
+@media (max-width: 600px) {
+
+	h1 {
+		font-size: 1.8rem;
+		margin-bottom: 2rem;
+	}
+
+	h2 {
+		font-size: 1.7rem;
+	}
+
+	h3 {
+		font-size: 1.8rem;
+		font-weight: 600;
+	}
+
+	h4 {
+		font-size: 1.7rem;
+		margin-bottom: 0rem;
+	}
+
+	p {
+		font-size: 1.4rem;
+		line-height: 2.3rem;
+		margin-bottom: 2rem;
+	}
+
+	.pre-tag {
+		font-size: 1.4rem;
+		margin-bottom: 1rem;
+		line-height: 2.5rem;
+	}
+
+	.link, .link > p {
+		font-size: 1.4rem;
+	}
+
+	label {
+		font-size: 1.4rem;
+		line-height: 1rem;
+	}
+
+	input[type="text"],
+	input[type="email"],
+	input[type="password"] {
+		font-size: 1.3rem;
+		text-align: center;
+		padding: 1rem;
+		margin: 0 1rem;
+		border-radius: 5px;
+		transition: all 400ms;
+	}
+
+	textarea {
+		font-size: 1.3rem;
+		height: 15rem;
+		padding: 1rem;
+		border-radius: 5px;
+		line-height: 1.7rem;
+	}
+
+	input[type="submit"] {
+		font-size: 1.3rem;
+	}
+
+	.link-button, .link-button-success, .link-button-danger {
+		font-size: 1.4rem;
+		padding: 1rem 1.5rem;
+		border-radius: 5px;
+		flex: 0 0 90%;
+		width: 25rem;
+	}
+
+	svg {
+		font-size: 1.8rem;
+	}
+
+	form {
+		display: flex;
+		width: fit-content;
+		text-align: center;
+	}
 }
