--- a/app/home-edit/homedit.css
+++ b/app/home-edit/homedit.css
@@ -5,7 +5,7 @@
     background-position: bottom;
     background-repeat: no-repeat;
     width: 100%;
-    padding: 25rem 0;
+    padding: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,17 +22,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
     text-align: center;
   }
 
-  .formulario {
-    width: 100%;
-  }
-
-  .formulario > input[type="text"], .formulario > input[type="email"], .formulario > input[type="password"], .formulario > input[type="submit"], .formulario > textarea, .formulario > input[type="button"] {
-    width: 100%;
-  }
+ 
   
   /* ---------------------------------------------------------------------------------------------------*/
   
@@ -40,7 +33,7 @@
   @media (max-width: 2000px) and (min-width: 1440px) {
       
     .section-homedit {
-      padding: 15rem 0;
+      padding: 1rem;
     }
     
     .article-homedit {
@@ -56,7 +49,7 @@
   @media (max-width: 1439px) and (min-width: 1024px) {
       
     .section-homedit {
-      padding: 15rem 0;
+      padding: 1rem;
     }
 
     .article-homedit {
@@ -71,7 +64,7 @@
   @media (max-width: 1023px) and (min-width: 601px) {
       
     .section-homedit {
-      padding: 15rem 0;
+      padding: 8rem 0;
     }
     
     .article-homedit {
@@ -85,21 +78,19 @@
   
   /* Estilos para Móviles */
   @media (max-width: 600px) {
+
       .section-homedit {
       padding: 0;
     }
     
     .article-homedit {
       width: 100%;
-      padding: 10rem 1rem 25rem 1rem;
+      padding: 10rem 1rem;
       margin: 0;
       border: none;
       border-radius: 0%;
       backdrop-filter: blur(0px);
-    background-color: rgba(0, 0, 0, 0.7);
+      background-color: rgba(0, 0, 0, 0.7);
     }
 
-    .button-container {
-      flex-direction: column;
-    }
   }
