--- a/app/modificar-password/modificar-password.css
+++ b/app/modificar-password/modificar-password.css
@@ -1,20 +1,20 @@
 
-.section-areas-edit {
+.section-pass-edit {
+    padding: 5rem 0 25rem 0;
     background-image: url("/img/city-night.jpg");
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
     width: 100%;
-    padding: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
-  .article-areas-edit {
+  .article-pass-edit {
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, 0.6);
-    width: 50%;
+    width: 40%;
     padding: 5rem;
     border-radius: 20px;
     border: solid 2px var(--white);
@@ -22,6 +22,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 2rem;
     text-align: center;
   }
   
@@ -29,9 +30,13 @@
   
   /* Estilos para Pantallas Grandes */
   @media (max-width: 2000px) and (min-width: 1440px) {
-      .article-areas-edit {
-      width: 60%;
-      padding: 4rem 2rem;
+    .section-pass-edit {
+      padding: 5rem 0 25rem 0;
+    }
+      
+    .article-pass-edit {
+      width: 50%;
+      padding: 4rem 3rem;
     }
     
   }
@@ -40,9 +45,13 @@
   
   /* Estilos para Laptops */
   @media (max-width: 1439px) and (min-width: 1024px) {
-      .article-areas-edit {
-      width: 75%;
-      padding: 4rem 2rem;
+    .section-pass-edit {
+      padding: 5rem 0 15rem 0;
+    }  
+    
+    .article-pass-edit {
+      width: 60%;
+      padding: 4rem 3rem;
     }
   }
   
@@ -50,8 +59,12 @@
   
   /* Estilos para Tablets */
   @media (max-width: 1023px) and (min-width: 601px) {
-      .article-areas-edit {
-      width: 90%;
+    .section-pass-edit {
+      padding: 5rem 0 17rem 0;
+    }    
+    
+    .article-pass-edit {
+      width: 70%;
       padding: 3rem 2rem;
       margin: 0 auto;
     }
@@ -61,13 +74,13 @@
   
   /* Estilos para Móviles */
   @media (max-width: 600px) {
-      .section-areas-edit {
-      padding: 0;
+      .section-pass-edit {
+      padding: 0 0 18rem 0;
     }
     
-    .article-areas-edit {
+    .article-pass-edit {
       width: 100%;
-      padding: 2rem 1rem;
+      padding: 4rem 1rem;
       margin: 0;
       border: none;
       border-radius: 0%;
