--- a/app/trayectoria-edit/trayectoria-edit.css
+++ b/app/trayectoria-edit/trayectoria-edit.css
@@ -5,7 +5,7 @@
     background-position: bottom;
     background-repeat: no-repeat;
     width: 100%;
-    padding: 15rem 0 35rem 0;
+    padding: 4rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,16 +22,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
     text-align: center;
-  }
-
-  .formulario {
-    width: 100%;
-  }
-
-  .formulario > input[type="text"], .formulario > input[type="email"], .formulario > input[type="password"], .formulario > input[type="submit"], .formulario > textarea, .formulario > input[type="button"] {
-    width: 100%;
   }
   
   /* ---------------------------------------------------------------------------------------------------*/
@@ -40,7 +31,7 @@
   @media (max-width: 2000px) and (min-width: 1440px) {
       
     .section-trayec-edit {
-      padding: 10rem 0 25rem 0;
+      padding: 1rem 0;
     }
     
     .article-trayec-edit {
@@ -56,7 +47,7 @@
   @media (max-width: 1439px) and (min-width: 1024px) {
       
     .section-trayec-edit {
-      padding: 10rem 0 25rem 0;
+      padding: 1rem 0;
     }
     
     .article-trayec-edit {
@@ -71,11 +62,11 @@
   @media (max-width: 1023px) and (min-width: 601px) {
       
     .section-trayec-edit {
-      padding: 10rem 0 25rem 0;
+      padding: 8rem 0;
     }
     
     .article-trayec-edit {
-      width: 90%;
+      width: 80%;
       padding: 3rem 2rem;
       margin: 0 auto;
     }
@@ -91,7 +82,7 @@
     
     .article-trayec-edit {
       width: 100%;
-      padding: 10rem 1rem 35rem 1rem;
+      padding: 10rem 1rem;
       margin: 0;
       border: none;
       border-radius: 0%;
