--- a/app/components/Footer.css
+++ b/app/components/Footer.css
@@ -149,7 +149,7 @@ footer {
 
 	.section-footer {
 		width: 100%;
-		padding: 0 2rem .5rem 2rem;
+		padding: 1rem 3rem .5rem 3rem;
 	}
 	
 	.logo-footer {
