--- a/app/components/TrayectoriaComponent.css
+++ b/app/components/TrayectoriaComponent.css
@@ -7,7 +7,7 @@
     width: 100%;
     padding: 12rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
   }
 
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
-    width: 22%;
+    width: 20%;
   }
   
   .keanu {
@@ -28,11 +28,10 @@
   .article-trayectoria {
     backdrop-filter: blur(6px);
     background-color: rgba(0, 0, 0, 0.6);
-    width: 76.5%;
     padding: 5rem;
     border-radius: 20px;
     border: solid 2px var(--white);
-    width: 77%;
+    width: 70%;
   }
   
   /* ---------------------------------------------------------------------------------------------------*/
@@ -42,10 +41,11 @@
     
     .section-trayectoria {
       padding: 3.5rem;
+      gap: 1rem;
     }
     
     .img-div {
-      gap: 3rem;
+      gap: 2rem;
       width: 30%;
     }
 
@@ -73,13 +73,14 @@
     
     .img-div {
       gap: 3rem;
-      width: 48%;
+      width: 100%;
       flex-direction: row;
       justify-content: center;
     }
 
     .keanu {
-      width: 100%;
+      width: 30%;
+      height: auto;
       border: solid 2px var(--white);
     }
     
@@ -104,7 +105,7 @@
     
     .img-div {
       gap: 3rem;
-      width: 48%;
+      width: 50%;
       flex-direction: row;
       justify-content: center;
     }
@@ -135,10 +136,11 @@
     
     .img-div {
       gap: 0;
-      width: 50%;
+      width: 100%;
       padding: 0;
       flex-direction: row;
       justify-content: center;
+      background-color: black;
     }
 
     .keanu {
