--- a/app/globals.css
+++ b/app/globals.css
@@ -232,14 +232,14 @@ input[type="email"]:hover,
 input[type="password"]:hover,
 textarea:hover {
 	cursor: pointer;
-	box-shadow: inset 0 0 10px var(--green);
+	box-shadow: inset 0 0 10px var(--blue);
 }
 
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="password"]:focus,
 textarea:focus {
-	box-shadow: 0 0 15px var(--white);
+	box-shadow: 0 0 15px var(--blue);
 	color: var(--blue);
 	outline: none;
 	border: solid 1px var(--blue);
